# trade-analytics-lakehouse

./: .gitignore  README.md  databricks.yml  local_setup.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.github/workflows/: cd.yml  ci.yml
config/: enums.py  settings.py  spark_session.py  utils.py
databricks/data_generator/: generate_trades.py
databricks/ingestion/: ingest_bronze.py  schema.py
databricks_notebooks/: 00_deploy_job.ipynb  01_ingest_bronze.ipynb  02_silver_transform.ipynb  03_run_dbt.ipynb
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/marts/: mart_daily_volume.sql  mart_risk_exposure.sql  mart_top_instruments.sql
dbt_project/models/staging/: stg_trades.sql
dbt_project/models/tests/: schema.yml
dbt_project/notional/macros/: cents_to_euros.sql
deploy/main_deploy/: config.py  deploy.sh  deploy_job.py  env.sh  requirements.txt  sync_src.py
deploy/resources/: pipeline.yml
deploy/targets/DEV/: settings.yml
local_data_transformations/: silver_transform.py
src/dbt_project/: dbt_project.yml  profiles.yml
src/trade_analytics/config/: enums.py  settings.py  spark_session.py  utils.py
src/trade_analytics/data_generator/: generate_trades.py
src/trade_analytics/data_ingestion/: ingest_bronze.py  schema.py
src/trade_analytics/data_transformations/: export_gold_csv.py  silver_transform.py
src/trade_analytics/dbt_project/: dbt_project.yml
src/trade_analytics/flows/: trade_pipeline_flow.py
src/trade_analytics/local_data_generator/: generate_trades.py
(+3 files in other folders)
